--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-ktor_version=2.1.2
 kotlin_version=1.7.20
-logback_version=1.2.11
+logback_version=1.4.4
+web3j_version=4.9.4
 kotlin.code.style=official
